<resources>
    <string name="app_name">HerramienTime</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_dialog_atencion">¡Atención!</string>
    <string name="promt_message_exit">¿Deseas salir de la app?</string>

    <string name="action_map">Mostrar mapa</string>
    <string name="error_activity_not_prepared">Actividad no preparada</string>
    <string name="prompt_not_found_herramienta">No se ha encontrado la herramienta seleccionada</string>
    <string name="nav_herramientas">Herramientas</string>
    <string name="nav_experiencias">Experiencias</string>
    <string name="nav_configuracion">Configuración</string>
    <string name="nav_mensajes">Mensajes</string>
    <string name="nav_ayuda">Ayuda</string>
    <string name="nav_group_ajustes">Ajustes</string>
    <string name="error_not_found_experiencia">No se ha encontrado la experiencia seleccionada</string>
    <string name="title_experiencias">Experiencias</string>
    <string name="action_confirmar">Confirmar</string>
    <string name="title_reserva">Reserva</string>
    <string name="action_reservar">Reservar</string>
    <string name="title_alquiler_herramienta">Alquiler herramienta</string>
    <string name="title_alquiler_experiencia">Contratar experiencia</string>
    <string name="prompt_aceptar">Aceptar</string>
    <string name="prompt_cancelar">Cancelar</string>
    <string name="action_subir_herramienta">Alquilar Herramienta</string>
    <string name="action_subir_experiencia">Contratar experiencia</string>
    <string name="preference_file_key">Preferences</string>
    <string name="preference_key_user">key_user</string>
    <string name="prompt_nombre">Nombre</string>
    <string name="prompt_apellidos">Apellidos</string>
    <string name="prompt_usuario">Usuario</string>
    <string name="prompt_password">Password</string>
    <string name="error_user_not_found">No existe el usuario introducido</string>
    <string name="error_fill_user">Tiene que rellenar el usuario</string>
    <string name="errpr_fill_password">Tiene que rellenar el password</string>
    <string name="message_loading">Cargando...</string>
    <string name="error_fill_name">Tiene que rellenar el nombre</string>
    <string name="errpr_fill_surname">Tiene que rellenar los apellidos</string>
    <string name="error_minimum_6_characts">Tiene que rellenar con un apellido con mínimo 6 caracteres</string>
    <string name="error_user_exists">El usuario introducido ya existe</string>
    <string name="rationale_locat">Es necesario el permiso para mostrar su ubicación</string>
    <string name="prompt_descripcion">Descripcion</string>
    <string name="prompt_titulo">Titulo</string>
    <string name="prompt_precio">Precio</string>
    <string name="action_make_photo">Hacer foto</string>
    <string name="prompt_title_foto">Foto:</string>
    <string name="prompt_fecha_inicial">Fecha Inicial</string>
    <string name="borrar">Borrar</string>
    <string name="prompt_fecha_final">Fecha final</string>
    <string name="prompt_error_first_log_reserve">Primero tiene que iniciar sesión para reservar</string>
    <string name="error_need_log_upload_herramienta">Primero tiene que iniciar sesión antes de subir una herramienta</string>
    <string name="error_need_log_upload_experience">Primero tiene que iniciar sesion antes de subir una experiencia</string>
    <string name="action_filter">Filtrar</string>
    <string name="filter_description">Descripcion</string>
    <string name="filter_precio_inicial">Precio inicial</string>
    <string name="filter_button_aplicar">Aplicar</string>
    <string name="filter_button_reiniciar">Deshacer</string>
    <string name="filter_precio_final">Precio final</string>
    <string name="prompt_first_register">Primero tiene que registrarse en la aplicación para poder realizar esta acción</string>
    <string name="title_detalle_usuario">Detalle usuario</string>
    <string name="prompt_acerca_de_ti">Acerca de ti</string>
    <string name="prompt_nombre_apellidos">Nombre y apellidos</string>
    <string name="error_field_acerca_de_ti">Tiene que rellenar algún dato acerca de usted</string>
    <string name="action_close_session">Cerrar sesión</string>
    <string name="prompt_title_user">USUARIO</string>
    <string name="prompt_need_password">El password introducido no es correcto</string>
    <string name="upload_herramienta">Dando de alta la herramienta</string>
</resources>
