<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_herramientas"
            android:icon="@drawable/ic_herramientas"
            android:title="@string/nav_herramientas" />
        <item
            android:id="@+id/nav_experiencias"
            android:icon="@drawable/ic_assistant_black_24dp"
            android:title="@string/nav_experiencias" />
    </group>

    <item android:title="@string/nav_group_ajustes">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_configuracion" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help_outline_black_24dp"
                android:title="@string/nav_ayuda" />
        </menu>
    </item>

</menu>
