<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map"
        android:icon="@drawable/ic_map_white_24dp"
        android:orderInCategory="1"
        android:title="@string/action_map"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_subir_experiencia"
        android:icon="@drawable/ic_file_upload_white_24dp"
        android:orderInCategory="2"
        android:title="@string/action_subir_experiencia"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        android:orderInCategory="3"
        android:title="@string/action_filter"
        app:showAsAction="always" />
</menu>
