<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutDescripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:maxLines="1"
                android:hint="@string/filter_description" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutPrecioInicial"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextPrecioInicial"
                    android:layout_width="match_parent"
                    android:inputType="numberDecimal"
                    android:layout_height="wrap_content"
                    android:hint="@string/filter_precio_inicial"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutPrecioFinal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editTextFechaPrecioFinal"
                    android:layout_width="match_parent"
                    android:inputType="numberDecimal"
                    android:layout_height="wrap_content"
                    android:hint="@string/filter_precio_final"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <Button
            android:id="@+id/buttonAplicar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_button_aplicar" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="8dp" />

        <Button
            android:id="@+id/buttonRestaurar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_button_reiniciar" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>