<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/dimen_margin_fragment"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/textInputLayoutTitulo"
            android:layout_alignParentLeft="true"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textInputEditTextTitulo"
                android:hint="@string/prompt_titulo"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/textInputLayoutDescripcion"
            android:layout_below="@+id/textInputLayoutTitulo"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/textInputEditTextDescripcion"
                android:hint="@string/prompt_descripcion"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="60dp"
            android:id="@+id/textInputLayoutPrecio"
            android:layout_below="@+id/textInputLayoutDescripcion"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:inputType="number|numberDecimal"
                android:layout_height="match_parent"
                android:gravity="center"
                android:id="@+id/textInputEditTextPrecio"
                android:hint="@string/prompt_precio"
                android:textSize="16dp" />
        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:id="@+id/spinnerSimbolos"
            android:layout_width="@dimen/dimen_width_precio"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayoutDescripcion"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/textInputLayoutPrecio" />

        <Spinner
            android:id="@+id/spinnerCategoria"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textInputLayoutDescripcion"
            android:layout_marginTop="15dp"
            android:layout_toRightOf="@+id/spinnerSimbolos" />

        <TextView
            android:id="@+id/textViewTitleFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/spinnerSimbolos"
            android:layout_margin="15dp"
            android:text="@string/prompt_title_foto" />

        <ImageView
            android:layout_below="@+id/textViewTitleFoto"
            android:id="@+id/imageViewFoto"
            android:layout_width="146dp"
            android:layout_margin="15dp"
            android:src="@drawable/ic_menu_camera"
            android:layout_centerInParent="true"
            android:layout_height="146dp" />


    </RelativeLayout>

</android.support.constraint.ConstraintLayout>