<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_margin_fragment"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="@dimen/dimen_image_ppal"
            android:layout_height="@dimen/dimen_image_ppal"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_person_white_24dp"
            android:tint="@android:color/black" />

        <RatingBar
            android:id="@+id/ratingBarCalificacion"
            android:layout_width="wrap_content"
            android:isIndicator="true"
            android:layout_height="wrap_content"
            android:theme="@style/RatingBar"
            android:layout_gravity="center"
            android:numStars="5"
            tools:rating="3" />

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutNombreApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:hint="@string/prompt_nombre_apellidos"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:hint="@string/prompt_usuario"
            android:maxLines="1" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutAcercaDeTi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:hint="@string/prompt_acerca_de_ti"
            android:lines="3" />

    </android.support.design.widget.TextInputLayout>


</LinearLayout>